dotnet user-sectret added

--- a/api/api.csproj
+++ b/api/api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>4b1f3b6a-4182-46fb-bfb3-414a86acfba2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
